<resources>
    <string name="app_name">Acceleration</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_failed"> Login failed </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_jabber">Jabber name</string>
    <string name="prompt_username">Username</string>
    <string name="action_register">Register</string>
    <string name="action_register_and_sign_in">Register and sign in!</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Do you really want to log out?</string>
    <string name="dialog_title">Logout</string>
    <string name="ok">Yeap!</string>
    <string name="no">Nope</string>
    <string name="show_keypad">Show keypad</string>
    <string name="hide_keypad">Hide keypad</string>
</resources>
